--- a/pikoc/src/PikocOptions.in
+++ b/pikoc/src/PikocOptions.in
@@ -4,6 +4,7 @@
 #define CLANG_RESOURCE_PATH "/home/cwz/llvm-root/build-3.8.0/lib/clang/3.8.0/include"
 #define CUDA_PATH "/usr/local/cuda"
 #define CUDA_INCLUDE_PATH "/usr/local/cuda/include"
+#define PIKOC_PATH "/home/cwz/piko-public/pikoc"
 #define PIKOC_API_PATH "/home/cwz/piko-public/pikoc/api/include"
 
 #define OS_STRING ""
