make cpu successful

--- a/pikoc/samples/reyesPipe/Makefile
+++ b/pikoc/samples/reyesPipe/Makefile
@@ -14,10 +14,9 @@ bin/reyes: dirs pikocGPU main.cpp $(OBJS)
 
 pikocGPU: dummy.cpp split.pikostage dice.pikostage shade.pikostage reyesPipe.h
 	../../bin/pikoc $(COMMON_INCLUDES) --numRuns=10 --opt --timer dummy.cpp
-	../../bin/ptxgen __pikoCompiledPipe.bc > __pikoCompiledPipe.ptx
 
 bin/reyes-cpu: dirs pikocCPU main.cpp $(OBJS)
-	g++ -std=c++11 -D__PIKOC_HOST__ -o bin/reyes-cpu -I. $(COMMON_INCLUDES) main.cpp $(CUDA_LIB_PATH) $(ASSIMP_LIB_PATH) $(ASSIMP_LIB) $(OBJS) -lcuda -lglut -lGLU -lGL
+	g++ -std=c++11 -D__PIKOC_HOST__ -o bin/reyes-cpu -I. $(COMMON_INCLUDES) main.cpp $(CUDA_LIB_PATH) $(ASSIMP_LIB_PATH) $(ASSIMP_LIB) $(OBJS) -lcuda -lglut -lGLU -lGL -pthread
 
 pikocCPU: dummy.cpp split.pikostage dice.pikostage shade.pikostage reyesPipe.h
 	../../bin/pikoc --target=CPU $(COMMON_INCLUDES) --numRuns=1 --opt --timer dummy.cpp
